--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,25 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+     My First Ionic Blank!!
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+    <ion-list>
+        <ion-item *ngFor="let lugar of lugares" (click)="irAVistaDeDetalleExistente()">
+          <h2>{{lugar.nombre}}</h2>
+          <h3>{{lugar.direccion}}</h3>
+          <p>{{lugar.categoria}}</p>
+        </ion-item>
+      </ion-list>
+
+      <ion-fab bottom right >
+          <button ion-fab (click)="irAVistaDeDetalle()">
+            <ion-icon ios="ios-add"md="md-add"></ion-icon>
+          </button> 
+        </ion-fab>
 </ion-content>
+
+
