--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,13 +7,24 @@
 </ion-header>
 
 <ion-content padding>
-    <ion-list>
-        <ion-item *ngFor="let lugar of lugares" (click)="irAVistaDeDetalleExistente()">
-          <h2>{{lugar.nombre}}</h2>
-          <h3>{{lugar.direccion}}</h3>
-          <p>{{lugar.categoria}}</p>
-        </ion-item>
-      </ion-list>
+    
+
+      <ion-list>
+          <ion-item-sliding *ngFor="let lugar of lugares">
+            <ion-item (click)="irAVistaDeDetalleExistente(lugar)">
+                <h2>{{lugar.nombre}}</h2>
+                <h3>{{lugar.direccion}}</h3>
+                <p>{{lugar.categoria}}</p>
+            </ion-item>
+            
+            <ion-item-options side="right">
+              <button ion-button color="danger" (click)="deleteLugar(lugar)">
+                <ion-icon name="trash"></ion-icon>
+                Borrar
+              </button>
+            </ion-item-options>
+          </ion-item-sliding>
+        </ion-list>
 
       <ion-fab bottom right >
           <button ion-fab (click)="irAVistaDeDetalle()">
